<resources>
    <string name="app_name">ZeroQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialogTitle">Enter Product Details</string>
    <string name="search">Search...</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="scan">Scan</string>
    <string name="search2">Search</string>
    <string name="zeroq">ZeroQ</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price(in ₹)</string>
    <string name="checkout">Checkout</string>
</resources>