<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bggradient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/zeroq"
            android:textSize="40sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:background="#21333C"
            android:textColor="#FFFFFF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <Button
            android:background="#E42B2B"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:padding="30dp"
            android:id="@+id/search"
            android:layout_marginTop="100dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:text="@string/search2"/>

        <Button
            android:id="@+id/scan"
            android:background="#7DC52A"
            android:drawableStart="@drawable/ic_baseline_camera_24"
            android:padding="35dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/scan"/>

        <Button
            android:id="@+id/details"
            android:drawableStart="@drawable/ic_baseline_storefront_24"
            android:padding="20dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="#FF5722"
            android:layout_marginTop="20dp"
            android:text="@string/products"/>

        <Button
            android:id="@+id/cart"
            android:drawableStart="@drawable/cart"
            android:padding="35dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="#2979FF"
            android:layout_marginTop="20dp"
            android:text="@string/cart"/>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/fragment2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/fragment3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>